--- a/Concept-Presentation/Gruppe2_Concept.tex
+++ b/Concept-Presentation/Gruppe2_Concept.tex
@@ -29,7 +29,7 @@
 		Bettina Blasberg\\
 		Georg Eckert\\
 		Stephanie Sara Groß\\
-		Phillip Roscher\\\
+		Philipp Roscher\\\
 
 \tableofcontents
 \clearpage\
